enhance book management UI with message notifications and improved styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,19 @@
 *{
     box-sizing: border-box;
+    transition: all 0.1s ease-in-out;
+
+
 }
 
 body {
+    position: relative;
     height: 80vh;
     width: 80vw;
     font-size: 1.5em;
     margin: 5vw;
     font-family: Arial, sans-serif;
+    background-color: rgb(146, 145, 145);
+
 }
 .container{
     margin: auto;
@@ -21,6 +27,7 @@ body {
         "table table "
         "table table ";
     place-items: center;
+    
 
 }
 
@@ -32,8 +39,26 @@ body {
     height: 100%;
     width:100%;
 }
-
-.header{
+.book-list tr:nth-child(even) {
+    background-color: rgb(212, 211, 205)
+}
+.book-list tr:nth-child(odd) {
+    background-color: white
+}
+.table-header th {
+    padding: 0.2em 0.5em;
+    font-size: 1em;
+    background-color: #c3dae0e7;
+}
+.table-row {
+    border: 1px solid black;
+}
+.table-row td {
+    padding: 0.5em;
+    font-size: 1em;
+    height: 0.5em;
+}
+.main-header{
     text-align: center;
     padding: 20px;
     background-color: #c3dae0e7;
@@ -101,4 +126,23 @@ body {
     text-align: center;
     font-size: 1.5em;
     margin-bottom: 1em;
+}
+.message-modal{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    background-color: rgb(82, 177, 82);
+    width: max-content;
+    height: auto;
+    padding: .6em;
+    border-radius: 20px;
+}
+.success-txt{
+    color: white;
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+.hidden{
+    display: none;
 }
