--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 
 body {
     position: relative;
-    height: 80vh;
+    height: 70vh;
     width: 80vw;
     font-size: 1.5em;
     margin: 5vw;
@@ -62,6 +62,7 @@ body {
     text-align: center;
     padding: 20px;
     background-color: #c3dae0e7;
+    border-radius: 8px;
 }
 .action{
     font-weight: bold;
@@ -91,9 +92,46 @@ body {
     height: auto;
     width: 20%;
     border-radius: 8px;
-    background-color: rgb(34, 233, 123);
+    background-color: #c3dae0e7;
     border: none;
     cursor: pointer;
+}
+.footer{
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-between;
+    background-color: #c3dae0e7;
+    align-items: center;
+    font-size: .8em;
+}
+.footer-text{
+    font-size: 0.8em;
+    color: #333;
+    margin: 10px;
+}
+.footer-stats{
+    display: flex;
+    gap: 20px;
+    margin: 10px;
+}
+.expensive-books,
+.average-books,
+.cheap-books{
+    font-size: 0.8em;
+    color: #333;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+.expensive-books{
+        background-color: rgb(37, 162, 201);
+}
+.average-books{
+    background-color: rgb(219, 206, 21);
+}
+.cheap-books{
+    background-color: rgb(233, 123, 34);
 }
 .book-details-modal{ 
     position: relative;
@@ -129,7 +167,7 @@ body {
 }
 .message-modal{
     position: fixed;
-    bottom: 0;
+    bottom:0;
     right: 0;
     background-color: rgb(82, 177, 82);
     width: max-content;
