--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ body {
     position: relative;
     width: 70%;
     height: 50%;
-    background-color: rgba(195, 218, 224, 23);
+    background-color: rgba(195, 218, 224, 0.905);
 }
 .close-modal{
     position: absolute;
@@ -174,6 +174,32 @@ body {
     font-size: 1.5em;
     margin-bottom: 1em;
 }
+.book-image{
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+.book-title{
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+}
+.book-price{
+    font-size: 1.2em;
+    text-align: center;
+    font-weight: bold;
+    color: #333;
+}
+.book-txt{
+    font-size: 1em;
+    text-align: center;
+    padding: 0.5em;
+    overflow-y: auto;
+    max-height: 200px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+}
+
 .message-modal{
     position: fixed;
     bottom:0;
