--- a/css/styles.css
+++ b/css/styles.css
@@ -1,93 +1,99 @@
+
+
+
 *{
     box-sizing: border-box;
-    transition: all 0.1s ease-in-out;
+}
+html{
+    height: 100%;
 }
 
 body {
+    height: 95%;
+    margin: 0 5vw;    
     position: relative;
-    height: 80vh;
-    width: 90vw;
     font-size: 1.5em;
-    margin: 5vw;
     font-family: Arial, sans-serif;
     background-color: hsl(0, 0%, 57%);
 
 }
 .features{
-    display: flex;
-    gap: 1em;
-    align-items: center;
     margin-bottom: 1em;
-    background-color: hsl(0, 0%, 37%);
+    display: flex;
+    align-items: center;
+    gap: 1em;
     padding: .5em;
     border-radius: 10px;
+    color: white;
+    background-color: hsl(0, 0%, 37%);
 }
 .page-info{
+    height: 2em;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 2em;
     border-radius: 8px;
-    margin-bottom: 1em;
     background-color:  hsl(0, 0%, 67%);
 }
 
 .nav-page{
-    background-color: #c3dae0e7 ;
     padding: .5em;
-    color: hsl(0, 0%, 37%);
     cursor: pointer;
     font-weight: bold;
+    color: hsl(0, 0%, 37%);
+    background-color: #c3dae0e7 ;
 }
 
 .page-num{
-
     color: white;
-
 }
 .container{
-    margin: auto;
+    height: 70%;
+    position: relative;
 }
 
 .book-cards {
+    margin-top: 2em;
+    justify-content: center;
+    align-items: center;
     display: flex;
     flex-wrap: wrap;
     gap: .5em;
-    justify-content: center;
-    align-items: center;
-    border : 1px solid #ccc;
-    width: 70%;   
-    margin: auto;
 }
 .book-card {
-    background-color: rgb(50, 202, 207);
-    border-radius: 10px;
+    width: 210px;
+    height: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 200px;
-    min-height: 150px;
-    max-height: 250px;
     justify-content: space-evenly;
-    padding: .5em;
     gap: .5em;
+    padding: .5em;
+    border: 3px solid black;
+    border-radius: 10px;    
+    background-color:   hsl(0, 0%, 67%);
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+}
+.book-card:hover{
+    transform: scale(1.5);
 }
 
 
 .book-card-img {
     width: 30%;
-    object-fit: cover;
     border-radius: 8px;
     border: 1px solid #ccc;
 }
 
 .book-card-title {
+    color: white;
     font-size: .7em;
     font-weight: bold;
 }
 
 .book-card-price {
-    font-size: .5em;
+    font-size: .6em;
     color: white;
 }
 
@@ -107,14 +113,15 @@ body {
     background-color: rgb(146, 145, 145);
 }
 .main-header{
+    margin-bottom: 1.5em;
     text-align: center;
-    padding: 20px;
-    background-color: #c3dae0e7;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border-radius: 8px;
+    background-color: #c3dae0e7;
 }
 .action{
     font-weight: bold;
-    padding: .4em;
+    padding: .6em;
     cursor: pointer;
 }
 .read,.update,.delete{
@@ -133,49 +140,48 @@ body {
     background-color: rgb(233, 123, 34);
 }
 .add-book{
-    place-self:  end center;
-    margin-bottom: 10px;
-    grid-area: add;
-    height: auto;
     width: 20%;
+    height: 2em;
+    font-weight: bold;
     border-radius: 8px;
-    background-color: #c3dae0e7;
-    border: none;
     cursor: pointer;
+    background-color: #c3dae0e7;
 }
-.footer{
-    display: flex;
+.footer{ 
     width: 100%;
+    position: relative;
+    left: 0;
+    top: 30%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #c3dae0e7;
     flex-wrap: wrap;
     border-radius: 8px;
-    margin-top: 20px;
-    justify-content: space-between;
-    background-color: #c3dae0e7;
-    align-items: center;
     font-size: .8em;
 }
 .footer-text{
+    margin: 10px;
     font-size: 0.8em;
     color: #333;
-    margin: 10px;
 }
 .footer-stats{
+    margin: 10px;
     display: flex;
     gap: 20px;
-    margin: 10px;
 }
 .expensive-books,
 .average-books,
 .cheap-books{
-    font-size: 0.8em;
-    color: #333;
     margin: 10px;
+    font-size: 0.8em;
     padding: 5px;
     border-radius: 5px;
     font-weight: bold;
+    color: #333;
 }
 .expensive-books{
-        background-color: rgb(37, 162, 201);
+    background-color: rgb(37, 162, 201);
 }
 .average-books{
     background-color: rgb(219, 206, 21);
@@ -184,18 +190,19 @@ body {
     background-color: rgb(233, 123, 34);
 }
 .book-details-modal{ 
-    position: relative;
     width: 90%;
     height: 70%;
+    position: relative;
     background-color: rgba(195, 218, 224, 0.905);
+}
+.dialog-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
 }
 .dialog-header{
     text-align: center;
-    font-size: 1.5em;
-    padding: 10px;
-    border-radius: 8px;
-    margin-bottom: 1em;
-
+    font-size: 2.5em;
 }
 .close-modal{
     position: absolute;
@@ -217,22 +224,28 @@ body {
     gap: 1em;
  
 }
+.dialog-body{
+    display: flex;
+    align-items: center;
+    gap :4em;
+}
+.dialog-stats{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
 .book-dialog-title{
-    text-align: center;
-    font-weight: bold;
-    color: rgb(56, 114, 101); 
+    font-weight: bold; 
     font-size: 2em;
-    margin-bottom: 1em;
+    color: rgb(56, 114, 101);
 }
 .book-dialog-img{
-    width: 70%;
-    height: 300px;
+    width: 40%;
+    border: 2px solid black;
     border-radius: 8px;
-    margin: auto;
-
 }
 .book-dialog-price{
-    font-size: 1.2em;
+    font-size: 1.5em;
     text-align: center;
     font-weight: bold;
     color: #333;
@@ -241,8 +254,6 @@ body {
     font-size: 1em;
     text-align: center;
     padding: 0.5em;
-    overflow-y: auto;
-    max-height: 200px;
     color: #333;
     border-radius: 8px;
 }
@@ -257,18 +268,40 @@ body {
     position: fixed;
     bottom:0;
     right: 0;
-    background-color: rgb(82, 177, 82);
-    width: max-content;
-    height: auto;
     padding: .6em;
     border-radius: 20px;
+    background-color: rgb(82, 177, 82);
 }
 .success-txt{
-    color: white;
     font-weight: bold;
     font-size: 1.2em;
+    color: white;
 }
 
 .hidden{
     display: none;
+}
+
+.display-button{   
+    padding: 1em;
+    border: 1px solid black;
+    cursor: pointer;
+    background-color: yellow;
+}
+
+.book-table {
+    height: 100%;
+    width:100%;
+    table-layout: fixed;
+    text-align: center;
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+
+.book-list tr:nth-child(even) {
+    background-color: rgb(212, 211, 205)
+}
+
+th{
+    background-color: white;
 }
